# QuineMcCluskey

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  minimize.py  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
quinemccluskey/: cli.py  minimize.py
simpliqm/: __init__.py  term.py
tests/: test_minimization.py
