[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "quinemccluskey"
dynamic = ["version"]
dependencies = []
authors = [
    { name = "Daniel Copley", email = "djcopley@users.noreply.github.com" },
]
description = """A powerful tool for minimizing Boolean functions"""

readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[tool.setuptools]
packages = ["quinemccluskey"]

[tool.setuptools_scm]

[project.scripts]
qm = "quinemccluskey.cli:cli"

[project.urls]
Homepage = "https://github.com/djcopley/QuineMcCluskey"
Repository = "https://github.com/djcopley/QuineMcCluskey.git"
Issues = "https://github.com/djcopley/QuineMcCluskey/issues"
